err part 2 start

--- a/_src/index.html
+++ b/_src/index.html
@@ -42,7 +42,7 @@
           </picture>
         </a>
         <ul class="nav__list">
-          <li class="nav__item"><a class="nav__link anchor menu-link" href="#consultation">консультация дизайнера&nbsp;интерьера</a>
+          <li class="nav__item"><a class="nav__link anchor menu-link" href="#consultation">консультация дизайнера интерьера</a>
           </li>
           <li class="nav__item"><a class="nav__link anchor menu-link" href="#decor">декорирование интерьера</a>
           </li>
@@ -99,6 +99,8 @@
               </li>
             </ul>
           </li>
+          <li class="nav__item nav__item__contacts"><a class="nav__link" href="https://mirmebely.ru/about/" target="_blank">О компании</a>
+          </li>
           <li class="nav__item nav__item__contacts"><a class="nav__link anchor menu-link" href="#contacts">контакты</a>
           </li>
           <li class="nav__item nav__item--tel"><a class="nav__link nav__link--tel" href="tel:+73952503504">+7 (3952) 503-504</a>
@@ -107,7 +109,7 @@
             <svg class="header__link-close__icon" viewBox="0 0 23 23" width="23" height="23">
               <use xlink:href="/img/sprite.svg#menu-close"></use>
             </svg></a>
-        <a class="nav__record record-link record-link--nav" href="#">
+        <a class="nav__record record-link record-link--nav anchor menu-link" href="#record-1">
           <svg class="record-link__icon" viewBox="0 0 90 49" width="90" height="49">
             <use xlink:href="/img/sprite.svg#record"></use>
           </svg><span class="record-link__text">Заказать звонок</span>
@@ -294,6 +296,12 @@
                     <img class="lazyload slider__img" data-src="/img/slider-bg-5.jpg" data-srcset="/img/slider-bg-5.jpg 1x, /img/slider-bg-5@2x.jpg 2x" alt="интерьер" width="961" height="641" />
                   </picture>
                 </div>
+                <div class="slider__item swiper-slide">
+                  <picture>
+                    <source data-srcset="/img/webp/slider-bg-6.webp 1x, /img/webp/slider-bg-6@2x.webp 2x" />
+                    <img class="lazyload slider__img" data-src="/img/slider-bg-6.jpg" data-srcset="/img/slider-bg-6.jpg 1x, /img/slider-bg-6@2x.jpg 2x" alt="интерьер" width="961" height="641" />
+                  </picture>
+                </div>
               </div>
             </div>
             <div class="slider__right">
@@ -336,7 +344,7 @@
         </div>
       </div>
     </section>
-    <section class="record">
+    <section class="record" id="record-1">
       <h2 class="record__title">Записаться на консультацию</h2>
       <div class="record__inner">
         <figure class="record__img-wrap">
@@ -519,7 +527,6 @@
             <p class="t-block__text t-block__text--bottom">интерьера</p>
           </div>
           <div class="causes__wrapper">
-            <h3 class="causes__mane-title causes__mane-title--min-hidden">Когда полезно</h3>
             <h3 class="causes__mane-title causes__mane-title--min-visually">Когда подойдет</h3>
             <ul class="decor-left__causes causes">
               <li class="causes__item">
@@ -719,7 +726,7 @@
         </div>
       </div>
     </section>
-    <section class="record">
+    <section class="record" id="record-2">
       <h2 class="record__title">Записаться на консультацию</h2>
       <div class="record__inner">
         <figure class="record__img-wrap">
@@ -799,7 +806,7 @@
                 </a>
               </li>
               <li class="social__item">
-                <a class="social__link" href="https://tttttt.me/mirmebely_bot" aria-label="telegramm" target="_blank" rel="noopener">
+                <a class="social__link" href="https://tttttt.me/mir_mebely" aria-label="telegramm" target="_blank" rel="noopener">
                   <svg class="social__icon" viewBox="0 0 40 40" width="40" height="40">
                     <use xlink:href="/img/sprite.svg#tg"></use>
                   </svg>
@@ -851,9 +858,11 @@
       </div>
       <div class="main-footer__bottom">
         <div class="footer__nav-wrap">
-          <nav class="footer__nav footer-nav--left"><a class="footer-nav__link" href="">О компании</a><a class="footer-nav__link" href="">Каталог мебели</a><a class="footer-nav__link" href="">Бренды</a>
+          <nav class="footer__nav footer-nav--left"><a class="footer-nav__link" href="https://mirmebely.ru/about/" target="_blank">О компании</a><a class="footer-nav__link" href="https://mirmebely.ru/catalog/" target="_blank">Каталог мебели</a><a class="footer-nav__link" href="https://mirmebely.ru/brand/"
+            target="_blank">Бренды</a>
           </nav>
-          <nav class="footer__nav footer-nav--right"><a class="footer-nav__link" href="">Распродажа</a><a class="footer-nav__link" href="">Акции</a><a class="footer-nav__link" href="#contacts">Контакты</a>
+          <nav class="footer__nav footer-nav--right"><a class="footer-nav__link" href="https://mirmebely.ru/sale/" target="_blank">Распродажа</a><a class="footer-nav__link" href="https://mirmebely.ru/promo/" target="_blank">Акции</a><a class="footer-nav__link" href="https://mirmebely.ru/contact/"
+            target="_blank">Контакты</a>
           </nav>
         </div>
         <div class="footer__copy copy">
