--- a/_src/index.html
+++ b/_src/index.html
@@ -25,7 +25,7 @@
 
 <body class="page-body">
   <header class="header" id="header">
-    <div class="header__inner container container--header"><a class="header__link-tel" href="tel:+73952503504">+7 (3952) 503-504</a>
+    <div class="header__inner container container--header"><a class="header__link-tel" href="tel:+73952265-705">+7 (3952) 265-705</a>
       <div class="header__logo-wrap">
         <a class="header__logo logo" href="/index.html">
           <picture>
@@ -75,27 +75,17 @@
               </li>
               <li class="sub-list__item"><a class="sub-list__link" href="https://mirmebely.ru/catalog/hall/" target="_blank" rel="noopener">ПРИХОЖИЕ</a>
               </li>
-              <li class="sub-list__item"><a class="sub-list__link" href="https://mirmebely.ru/catalog/library/" target="_blank" rel="noopener">БИБЛИОТЕКИ</a>
-              </li>
               <li class="sub-list__item"><a class="sub-list__link" href="https://mirmebely.ru/catalog/cabinets/" target="_blank" rel="noopener">ШКАФЫ</a>
               </li>
               <li class="sub-list__item"><a class="sub-list__link" href="https://mirmebely.ru/catalog/closets/" target="_blank" rel="noopener">ШКАФЫ-КУПЕ</a>
               </li>
               <li class="sub-list__item"><a class="sub-list__link" href="https://mirmebely.ru/catalog/drawers/" target="_blank" rel="noopener">КОМОДЫ</a>
               </li>
-              <li class="sub-list__item"><a class="sub-list__link" href="https://mirmebely.ru/catalog/tumba/" target="_blank" rel="noopener">ТУМБЫ</a>
-              </li>
               <li class="sub-list__item"><a class="sub-list__link" href="https://mirmebely.ru/catalog/armchair/" target="_blank" rel="noopener">КРЕСЛА</a>
               </li>
-              <li class="sub-list__item"><a class="sub-list__link" href="https://mirmebely.ru/catalog/mirror/" target="_blank" rel="noopener">ЗЕРКАЛА</a>
+              <li class="sub-list__item"><a class="sub-list__link" href="https://mirmebely.ru/sale/" target="_blank" rel="noopener">РАСПРОДАЖА</a>
               </li>
-              <li class="sub-list__item"><a class="sub-list__link" href="https://mirmebely.ru/catalog/shelves/" target="_blank" rel="noopener">ПОЛКИ</a>
-              </li>
-              <li class="sub-list__item"><a class="sub-list__link" href="https://mirmebely.ru/catalog/" target="_blank" rel="noopener">КАРТИНЫ</a>
-              </li>
-              <li class="sub-list__item"><a class="sub-list__link" href="https://mirmebely.ru/catalog/" target="_blank" rel="noopener">РАСПРОДАЖА</a>
-              </li>
-              <li class="sub-list__item"><a class="sub-list__link" href="https://mirmebely.ru/catalog/" target="_blank" rel="noopener">АКЦИИ</a>
+              <li class="sub-list__item"><a class="sub-list__link" href="https://mirmebely.ru/promo/ " target="_blank" rel="noopener">АКЦИИ</a>
               </li>
             </ul>
           </li>
@@ -103,7 +93,7 @@
           </li>
           <li class="nav__item nav__item__contacts"><a class="nav__link anchor menu-link" href="#contacts">контакты</a>
           </li>
-          <li class="nav__item nav__item--tel"><a class="nav__link nav__link--tel" href="tel:+73952503504">+7 (3952) 503-504</a>
+          <li class="nav__item nav__item--tel"><a class="nav__link nav__link--tel" href="tel:+73952265-705">+7 (3952) 265-705</a>
           </li>
         </ul><a class="header__link header__link--close" href="#header-nav"><span class="header__link-text">Закрыть меню</span>
             <svg class="header__link-close__icon" viewBox="0 0 23 23" width="23" height="23">
@@ -128,6 +118,8 @@
           <source media="(max-width: 360px)" type="image/jpeg" srcset="/img/promo-bg-360.jpg 1x, /img/promo-bg-360@2x.jpg 2x" />
           <source media="(max-width: 412px)" type="image/webp" srcset="/img/webp/promo-bg-412.webp 1x, /img/webp/promo-bg-412@2x.webp 2x" />
           <source media="(max-width: 412px)" type="image/jpeg" srcset="/img/promo-bg-412.jpg 1x, /img/promo-bg-412@2x.jpg 2x" />
+          <source media="(max-width: 767px)" type="image/webp" srcset="/img/webp/promo-bg-767.webp 1x, /img/webp/promo-bg-767@2x.webp 2x" />
+          <source media="(max-width: 767px)" type="image/jpeg" srcset="/img/promo-bg-767.jpg 1x, /img/promo-bg-767@2x.jpg 2x" />
           <source media="(max-width: 768px)" type="image/webp" srcset="/img/webp/promo-bg-768.webp 1x, /img/webp/promo-bg-768@2x.webp 2x" />
           <source media="(max-width: 768px)" type="image/jpeg" srcset="/img/promo-bg-768.jpg 1x, /img/promo-bg-768@2x.jpg 2x" />
           <source media="(max-width: 1200px)" type="image/webp" srcset="/img/webp/promo-bg-1200.webp 1x, /img/webp/promo-bg-1200@2x.webp 2x" />
@@ -800,7 +792,7 @@
                 </a>
               </li>
               <li class="social__item">
-                <a class="social__link" href="https://api.whatsapp.com/send?phone=89500634939" aria-label="" target="_blank" rel="noopener">
+                <a class="social__link" href="https://api.whatsapp.com/send?phone=+79500634939" aria-label="" target="_blank" rel="noopener">
                   <svg class="social__icon" viewBox="0 0 40 40" width="40" height="40">
                     <use xlink:href="/img/sprite.svg#whatsapp"></use>
                   </svg>
@@ -877,9 +869,9 @@
           </p>
         </div>
       </div>
-      <div class="footer__up up">
-        <a class="up__link" href="#" aria-label="В начало"></a>
-      </div>
+    </div>
+    <div class="footer__up up">
+      <a class="up__link" href="#" aria-label="В начало"></a>
     </div>
   </footer>
   <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;amp;apikey=cf1c1431-1386-4d22-ba10-fe09e8ffcd25;lang=ru_RU&amp;amp;load=Map,Placemark,Layer"></script>
